# libNRFDrivers

./: .cproject  .gitignore  .project  CMakeLists.txt  comparatorCoordinated.cpp  comparatorCoordinated.h  libNRFDrivers.cpp  nvicCoordinated.cpp  nvicCoordinated.h  readme.md  sdk_config.h
CMakeScripts/: CMakeEnv.cmake  CMake_nRF5x.cmake
